--- a/.github/workflows/integracao-continua.yml
+++ b/.github/workflows/integracao-continua.yml
@@ -1,10 +1,12 @@
 name: CI Voll Med
 
+
 on:
   push:
-    branches: ["main]
+    branches: ["main"]
   pull_request:
     branches: ["main"]
+    
 jobs:
   build:
 
