--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>api</name>
 	<description>API Rest da aplicação Voll.med</description>
 	<properties>
+ 		<sonar.organization>pedroramoss</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
