--- a/.github/workflows/integracao-continua.yml
+++ b/.github/workflows/integracao-continua.yml
@@ -32,3 +32,8 @@ jobs:
 
     - name: Executa Testes unitarios
       run: mvn -B verify
+
+    - name: Analise estatica
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=PedroRamoss_vollmed-api
