--- a/.github/workflows/integracao-continua.yml
+++ b/.github/workflows/integracao-continua.yml
@@ -33,7 +33,10 @@ jobs:
     - name: Executa Testes unitarios
       run: mvn -B verify
 
+    - name: Gera relatorio Jacoco
+      run: mvn jacoco:prepare-agent verify
+
     - name: Analise estatica
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=PedroRamoss_vollmed-api
+      run: mvn sonar:sonar -Dsonar.projectKey=PedroRamoss_vollmed-api
