--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,14 @@ jobs:
         USER: ubuntu
         HOST: 18.224.228.247
       run: |
-        echo "$PRIVATE_KEY" : deploy_key.pem
-        chmod 600 deploy_key.pem
+        echo "$PRIVATE_KEY" : deploy.pem
+        chmod 600 deploy.pem
 
         docker save -o vollmed-api.tar vollmed-api_api
-        scp -o StrictHostKeyChecking=no -i deploy_key.pem vollmed-api.tar $USER@$HOST:/home/ubuntu/
-        scp -o StrictHostKeyChecking=no -i deploy_key.pem init.sql $USER@$HOST:/home/ubuntu/
-        scp -o StrictHostKeyChecking=no -i deploy_key.pem docker-compose-prod.yaml $USER@$HOST:/home/ubuntu/
-        scp -o StrictHostKeyChecking=no -i deploy_key.pem script-deploy.sh $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy.pem vollmed-api.tar $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy.pem init.sql $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy.pem docker-compose-prod.yaml $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy.pem script-deploy.sh $USER@$HOST:/home/ubuntu/
 
-        ssh -i deploy_key.pem $USER@#HOST "chmod +x script-deploy.sh && ./script-deploy.sh"
+        ssh -i deploy.pem $USER@#HOST "chmod +x script-deploy.sh && ./script-deploy.sh"
         
